applications/mariadb-pv/service-phpmyadmin.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: phpmyadmin
  name: phpmyadmin
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: phpmyadmin
  sessionAffinity: None
  type: ClusterIP
