applications/mariadb-pv/ingress-phpmyadmin.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-phpmyadmin
spec:
  rules:
  - host: pma-mariadb-pv.k3sdemo.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: phpmyadmin
            port:
              number: 80
